# ComputerLearningLibrary

./: README.md
0_BasicLearning/HelloDocker/: README.md
0_BasicLearning/OpenCV_learning/: Chapter1_read_videos.cpp  Chapter5_warp_image.cpp  Chapter6_color_detection.cpp  Chapter7_contour_detection.cpp
0_BasicLearning/OpenCV_learning_C++/: Chapter1_read_Images.cpp
0_BasicLearning/SparkDmo/: RDD.scala  mingdan.txt
0_BasicLearning/opencv_example_python/: 01.图像的IO操作.py  02.图像绘制图形.py  03.图像基础处理.ipynb  04.图像的算数运算.ipynb  05.几何变换.ipynb  06.形态学操作.ipynb  07.图像平滑.ipynb  08.直方图.ipynb  09.边缘检测.ipynb  10 .模板匹配.ipynb  11.霍夫变换.ipynb  12.特征提取.ipynb  13.视频读写.py  14.视频追踪.py  15.人脸检测.ipynb  out.avi
1_MachineLearning/: README.md
6_Project/CSJL/: README.md
6_Project/Mobileshop/: README.md
6_Project/book_sys/: README.md
8_visualizations/: README.md  bar.py  bar_with_pie.py  double_line_chart.py  draw_roc.py  infrence_time_acc.py  parameter_acc_buble.py  plot_box.py  plot_violin.py  plt_line_chart.py  points.py  radar_chart.py
8_visualizations/data/: violin_data.csv
8_visualizations/可视化大全/: week1 关联图 - 01散点图 & 02气泡图.ipynb  week1 关联图 - 03最佳拟合线 & 04带状图 & 05计数图.ipynb  week1 关联图 - 06边缘直方图 & 07边缘箱线图.ipynb  week1 关联图 - 08相关性矩阵图 & 09成对分析图.ipynb  week2 偏差图 - 10发散性条形图 & 11发散文本.ipynb  week2 偏差图 - 12包点图 & 13棒棒糖图.ipynb  week2 偏差图 - 14面积图.ipynb  week3 排序图 - 15有序的柱状图，16棒棒糖图，17包点图.ipynb  week3 排序图 - 18坡度图，19哑铃图.ipynb  week4 分布图 - 20连续变量直方图 & 21分类变量直方图.ipynb  week4 分布图 - 22密度图 & 23直方密度曲线图.ipynb  week4 分布图 - 24 Joy Plot & 25 分布式包点图.ipynb  week4 分布图 - 26箱型图 & 27 包点+箱型图.ipynb  week4 分布图 - 28小提琴图 & 29人口金字塔 & 30分类图.ipynb  week5 组成图 - 31华夫饼图，32饼图，33树形图，.ipynb  week6 时间序列 - 35时间序列图 & 36 带波峰波谷的时间序列图.ipynb  (+6 more)
Basic Learning/Opencv_learning/: CMakeLists.txt  Chapter2_basic_function.cpp
opencv_learning/: Chapter1_read_webcam.cpp  Chapter4_draw_putext.cpp  Chapter8_face_detection.cpp
(+261 files in other folders)
